# continuous_integration

./: .gitignore  README.md  add_repo_to_ci.py  catkin_make_repo  get_latest_ros_version.sh  logparser_rules  prepare-build.sh  rosmake_repo  run_build.sh  run_build_catkin_or_rosbuild  run_build_impl.sh
ci_test_pkg/: CMakeLists.txt  package.xml
ci_test_pkg/test/: test.cc
ci_test_public_artifact/: CMakeLists.txt  package.xml
ci_test_public_artifact/test/: test.py
ci_test_roscore/: CMakeLists.txt  package.xml
ci_test_roscore/test/: roscore-test.py
ci_unit_tests/: CMakeLists.txt  package.xml
ci_unit_tests/test/: Test.py  ab.rosinstall  abc.rosinstall  test_parse_dependency.sh  test_repos.tar.bzip2  test_rosinstall-diff.sh  test_rosinstall_diff.sh
ci_unit_tests/test/expected/: test_parse_dependency.out  test_rosinstall-diff.out  test_rosinstall_diff.out
ci_unit_tests/test/workspace/: .gitignore  makefile
ci_unit_tests/test/workspace/src/: .gitignore
ci_unit_tests/test/workspace/src/test_package/: CMakeLists.txt  TestPackage.py  dependencies.rosinstall  local.rosinstall  package.xml  testTools.py
example/: config.xml
ignored_package/: CMakeLists.txt  package.xml
ignored_package_CI_IGNORE/: CMakeLists.txt  package.xml
ignored_package_thirdparty/: CMakeLists.txt  package.xml
modules/: common_definitions.sh  parse_dependency.sh  prepare_wstool_workspace.sh  pull_auto_dependencies.sh  rosinstall-diff.py  rosinstall_diff.py  sanity_checks.sh
