<?xml version="1.0" encoding="utf-8"?>
<package>
  <name>ci_test_roscore</name>
  <version>0.0.1</version>
  <description>ci_test_roscore</description>
  <maintainer email="simon.lynen@mavt.ethz.ch">Simon Lynen</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <build_depend>rostest</build_depend>
  <build_depend>rosunit</build_depend>
</package>


