<?xml version="1.0" encoding="utf-8"?>
<package>
  <name>ci_unit_tests</name>
  <description>some ci units</description>
  <version>0.0.1</version>
  <maintainer email="hannes.sommer@mavt.ethz.ch">Hannes Sommer</maintainer>
  <author>Hannes Sommer</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

</package>
