<?xml version="1.0" encoding="utf-8"?>
<package>
  <name>ignored_test_pkg</name>
  <version>0.0.1</version>
  <description>
     ignored_test_pkg
  </description>
  <maintainer email="simon.lynen@mavt.ethz.ch">Simon Lynen</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <build_depend>non_existing_dep</build_depend>
</package>


