<?xml version="1.0" encoding="utf-8"?>
<package>
  <name>ignored_test_ci_ignore</name>
  <version>0.0.1</version>
  <description>
     excluded from package auto discovery because of the top level file CI_IGNORE
  </description>
  <maintainer email="simon.lynen@mavt.ethz.ch">Simon Lynen</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <build_depend>non_existing_dep</build_depend>
</package>


